rust_build_error.txt
cargo :     Checking ga
fime_cpu v0.1.0 (C:\Use
rs\Hamza\Desktop\GAFIME
\src\cpu\gafime_cpu)
At line:1 char:1
+ cargo check 2>&1 | Ou
t-File -FilePath c:\Use
rs\Hamza\Desktop\GAFIME
\r ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (    Checking    
 ga...cpu\gafime_cp    
u):String) [], Rem    o
teException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
error[E0658]: use of un
stable library feature 
`once_cell_try`
  --> src\async_pipelin
e.rs:33:14
   |
33 |     CUDA_LIB.get_o
r_try_init(|| {
   |              ^^^^^
^^^^^^^^^^
   |
   = note: see issue #1
09737 <https://github.c
om/rust-lang/rust/issue
s/109737> for more info
rmation

warning: unused import:
 `rayon::prelude`
 --> src\batch_launcher
.rs:7:5
  |
7 | use rayon::prelude:
:*;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of `
#[warn(unused)]`) on by
 default

For more information ab
out this error, try `ru
stc --explain E0658`.
warning: `gafime_cpu` (
lib) generated 1 warnin
g
error: could not compil
e `gafime_cpu` (lib) du
e to 1 previous error; 
1 warning emitted
